# thechernoopengl

./: CMakeLists.txt  main.cpp
funn_with_squares/: Square.cpp  Square.h
funn_with_squares/factory/: SmallSquareFactory.cpp  SmallSquareFactory.h  SquareFactory.h
shader_provider/: ShaderProvider.cpp  ShaderProvider.h  ShaderSource.cpp  ShaderSource.h
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h
src/shaders/: FragmentShader.cpp  FunnyFragmentShader.cpp  FunnyVertexShader.cpp  VertexShader.cpp
src/tests/: TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h  test.cpp  test.h
